--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       apiKey: "AIzaSyCsh8EAZvb3d0SbxlLX7gu_ifcDzHywZj4",
       authDomain: "junglejuxe-2ab83.firebaseapp.com",
       projectId: "junglejuxe-2ab83",
-      storageBucket: "junglejuxe-2ab83.firebasestorage.app",
+      storageBucket: "junglejuxe-2ab83.appspot.com",
       messagingSenderId: "249789034877",
       appId: "1:249789034877:web:f955419c53d00cd62f1c14",
       measurementId: "G-N4TB55X911"
