--- a/index.html
+++ b/index.html
@@ -22,48 +22,44 @@
   </div>
 
   <!-- Firebase Scripts -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-  <script>
-    // Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCsh8EAZvb3d0SbxlLX7gu_ifcDzHywZj4",
-      authDomain: "junglejuxe-2ab83.firebaseapp.com",
-      projectId: "junglejuxe-2ab83",
-      storageBucket: "junglejuxe-2ab83.appspot.com",
-      messagingSenderId: "249789034877",
-      appId: "1:249789034877:web:f955419c53d00cd62f1c14",
-      measurementId: "G-N4TB55X911"
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyCsh8EAZvb3d0SbxlLX7gu_ifcDzHywZj4",
+    authDomain: "junglejuxe-2ab83.firebaseapp.com",
+    projectId: "junglejuxe-2ab83",
+    storageBucket: "junglejuxe-2ab83.appspot.com", <!-- ✅ also fixed here -->
+    messagingSenderId: "249789034877",
+    appId: "1:249789034877:web:f955419c53d00cd62f1c14",
+    measurementId: "G-N4TB55X911"
+  };
 
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-    // Submit email function
-    function submitEmail(event) {
-      event.preventDefault();
-      const emailInput = document.getElementById("emailInput");
-      const email = emailInput.value.trim();
+  window.submitEmail = async function(event) {
+    event.preventDefault();
+    const emailInput = document.getElementById("emailInput");
+    const email = emailInput.value.trim();
 
-      if (!email) {
-        alert("Please enter a valid email address.");
-        return;
-      }
-
-      db.collection("emails").add({
-        email: email,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      })
-      .then(() => {
-        window.location.href = "main.html"; // Redirect on success
-      })
-      .catch((error) => {
-        console.error("Error saving email:", error);
-        alert("Something went wrong. Please try again later.");
-      });
+    if (!email) {
+      alert("Please enter a valid email address.");
+      return;
     }
-  </script>
+
+    try {
+      await addDoc(collection(db, "emails"), {
+        email: email,
+        timestamp: serverTimestamp()
+      });
+      window.location.href = "main.html";
+    } catch (error) {
+      console.error("Error saving email:", error);
+      alert("Something went wrong. Please try again later.");
+    }
+  };
+</script>
 </body>
 </html>
