--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="email-wall">
       <video class="logo" src="assets/caev_jungle.mp4" autoplay muted playsinline onended="this.pause(); this.currentTime = this.duration;" preload="auto"></video>
 
-      <form onsubmit="submitEmail(event)">
-        <input type="email" id="emailInput" placeholder="Enter your email" required />
+      <!-- Updated Google Sheets Form -->
+      <form action="https://script.google.com/macros/s/AKfycbxh8QwKuZxen1VlHFzsP2RuL9Sc5_E8PX_wuUAwh-oRaLYhmqazlT6Oc9-j3DRd5rivDA/exec" method="POST" onsubmit="redirectAfterSubmit(event)">
+        <input type="email" name="email" placeholder="Enter your email" required />
         <button type="submit">Enter</button>
       </form>
 
@@ -21,45 +22,22 @@
     </div>
   </div>
 
-  <!-- Firebase Scripts -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  <script>
+    function redirectAfterSubmit(event) {
+      event.preventDefault();
+      const form = event.target;
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCsh8EAZvb3d0SbxlLX7gu_ifcDzHywZj4",
-    authDomain: "junglejuxe-2ab83.firebaseapp.com",
-    projectId: "junglejuxe-2ab83",
-    storageBucket: "junglejuxe-2ab83.appspot.com", <!-- ✅ also fixed here -->
-    messagingSenderId: "249789034877",
-    appId: "1:249789034877:web:f955419c53d00cd62f1c14",
-    measurementId: "G-N4TB55X911"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  window.submitEmail = async function(event) {
-    event.preventDefault();
-    const emailInput = document.getElementById("emailInput");
-    const email = emailInput.value.trim();
-
-    if (!email) {
-      alert("Please enter a valid email address.");
-      return;
-    }
-
-    try {
-      await addDoc(collection(db, "emails"), {
-        email: email,
-        timestamp: serverTimestamp()
+      // Submit the form manually
+      fetch(form.action, {
+        method: "POST",
+        body: new FormData(form)
+      }).then(() => {
+        window.location.href = "main.html";
+      }).catch((error) => {
+        console.error("Submission failed:", error);
+        alert("Something went wrong. Please try again later.");
       });
-      window.location.href = "main.html";
-    } catch (error) {
-      console.error("Error saving email:", error);
-      alert("Something went wrong. Please try again later.");
     }
-  };
-</script>
+  </script>
 </body>
 </html>
