--- a/main.html
+++ b/main.html
@@ -41,11 +41,11 @@
 
         <div class="track-scroll-container">
           <div class="track-list">
-            <div class="track" data-title="Track 1" data-artist="CAEV">
+            <div class="track" data-title="BOI UM TUU PAED" data-artist="CAEV PROD. BY CAEV">
               <audio preload="none" src="previews/track1.mp3" controls></audio>
             </div>
-            <div class="track" data-title="Track 2" data-artist="CAEV">
-              <audio preload="none" src="previews/track2.mp3" controls></audio>
+            <div class="track" data-title="BOI UM TUU PAED" data-artist="CAEV PROD. BY CAEV">
+              <audio preload="none" src="previews/track1.mp3" controls></audio>
             </div>
             <div class="track" data-title="Track 3" data-artist="CAEV">
               <audio preload="none" src="previews/track3.mp3" controls></audio>
