--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
   </header>
 
   <!-- Main Content -->
-  <main style="margin-top: 120px;">
+  <main style="margin-top: 150px;">
     <section id="album">
       <div class="player-wrapper">
         <div class="player-container">
@@ -31,7 +31,7 @@
             <h1>JungleJuxe</h1>
             <p>by CAEV</p>
           </div>
-
+          
           <div class="player-controls">
             <button onclick="prevTrack()">⏮</button>
             <button onclick="togglePlay()" id="playPauseBtn">▶️</button>
@@ -50,10 +50,14 @@
         </div>
       </div>
     </section>
-
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
     <section id="event">
       <div class="release-video-wrapper">
-        <video class="release-video" id="releaseVideo" src="assets/jj_party.mp4" autoplay muted loop playsinline preload="auto">
+        <video class="release-video" id="releaseVideo" src="assets/jj_party.mp4" autoplay muted loop playsinline preload="auto" width="320" height="320">
           Your browser does not support the video tag.
         </video>
       </div>
