--- a/main.html
+++ b/main.html
@@ -47,6 +47,11 @@
           <div class="track-list" id="trackList">
             <!-- Injected by JS -->
           </div>
+          <div class="preorder-button">
+  <a href="https://yourshopifystore.com/products/your-album" target="_blank">
+    🎧 Pre-Order Album
+  </a>
+</div>
         </div>
       </div>
     </section>
