--- a/main.html
+++ b/main.html
@@ -47,10 +47,9 @@
           <div class="track-list" id="trackList">
             <!-- Injected by JS -->
           </div>
-          <div class="preorder-button">
-  <a href="https://yourshopifystore.com/products/your-album" target="_blank">
-    🎧 Pre-Order Album
-  </a>
+          <!-- Pre-order Button -->
+<div class="preorder-wrapper">
+  <div id="product-component-1749491143341"></div>
 </div>
         </div>
       </div>
