--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <h1>JungleJuxe</h1>
             <p>by CAEV</p>
           </div>
-          
+
           <div class="player-controls">
             <button onclick="prevTrack()">⏮</button>
             <button onclick="togglePlay()" id="playPauseBtn">▶️</button>
@@ -47,18 +47,18 @@
           <div class="track-list" id="trackList">
             <!-- Injected by JS -->
           </div>
+
           <!-- Pre-order Button -->
-<div class="preorder-wrapper">
-  <div id="product-component-1749491143341"></div>
-</div>
+          <div class="preorder-wrapper">
+            <div id="product-component-1749491143341"></div>
+          </div>
+
         </div>
       </div>
     </section>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+
+    <br/><br/><br/><br/><br/>
+
     <section id="event">
       <div class="release-video-wrapper">
         <video class="release-video" id="releaseVideo" src="assets/jj_party.mp4" autoplay muted loop playsinline preload="auto" width="320" height="320">
@@ -72,209 +72,13 @@
       </div>
     </section>
 
-        <section id="store">
-      <div class="shopify-container" id="store">
-<h2>Merch & Products</h2>
-<div id="shopify-embed"><div id='collection-component-1748292361713'></div>
-<script type="text/javascript">
-/*<![CDATA[*/
-(function () {
-var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-if (window.ShopifyBuy) {
-if (window.ShopifyBuy.UI) {
-ShopifyBuyInit();
-} else {
-loadScript();
-}
-} else {
-loadScript();
-}
-function loadScript() {
-var script = document.createElement('script');
-script.async = true;
-script.src = scriptURL;
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-script.onload = ShopifyBuyInit;
-}
-function ShopifyBuyInit() {
-var client = ShopifyBuy.buildClient({
-domain: 'xvpav0-s3.myshopify.com',
-storefrontAccessToken: '739f2f97a9537660c80a18fe33999d00',
-});
-ShopifyBuy.UI.onReady(client).then(function (ui) {
-ui.createComponent('collection', {
-id: '511679234362',
-node: document.getElementById('collection-component-1748292361713'),
-moneyFormat: '%24%7B%7Bamount%7D%7D',
-options: {
-"product": {
-"styles": {
-"product": {
-"@media (min-width: 601px)": {
-"max-width": "calc(25% - 20px)",
-"margin-left": "20px",
-"margin-bottom": "50px",
-"width": "calc(25% - 20px)"
-},
-"img": {
-"height": "calc(100% - 15px)",
-"position": "absolute",
-"left": "0",
-"right": "0",
-"top": "0"
-},
-"imgWrapper": {
-"padding-top": "calc(75% + 15px)",
-"position": "relative",
-"height": "0"
-}
-},
-"title": {
-"color": "#d0ffc0"
-},
-"button": {
-"font-weight": "bold",
-"color": "#3e019a",
-":hover": {
-"color": "#3e019a",
-"background-color": "#bbe6ad"
-},
-"background-color": "#d0ffc0",
-":focus": {
-"background-color": "#bbe6ad"
-}
-},
-"price": {
-"color": "#d0ffc0"
-},
-"compareAt": {
-"color": "#d0ffc0"
-},
-"unitPrice": {
-"color": "#d0ffc0"
-}
-},
-"text": {
-"button": "Add to cart"
-}
-},
-"productSet": {
-"styles": {
-"products": {
-"@media (min-width: 601px)": {
-"margin-left": "-20px"
-}
-}
-}
-},
-"modalProduct": {
-"contents": {
-"img": false,
-"imgWithCarousel": true,
-"button": false,
-"buttonWithQuantity": true
-},
-"styles": {
-"product": {
-"@media (min-width: 601px)": {
-"max-width": "100%",
-"margin-left": "0px",
-"margin-bottom": "0px"
-}
-},
-"button": {
-"font-weight": "bold",
-"color": "#3e019a",
-":hover": {
-"color": "#3e019a",
-"background-color": "#bbe6ad"
-},
-"background-color": "#d0ffc0",
-":focus": {
-"background-color": "#bbe6ad"
-}
-},
-"title": {
-"font-family": "Helvetica Neue, sans-serif",
-"font-weight": "bold",
-"font-size": "26px",
-"color": "#4c4c4c"
-},
-"price": {
-"font-family": "Helvetica Neue, sans-serif",
-"font-weight": "normal",
-"font-size": "18px",
-"color": "#4c4c4c"
-},
-"compareAt": {
-"font-family": "Helvetica Neue, sans-serif",
-"font-weight": "normal",
-"font-size": "15.299999999999999px",
-"color": "#4c4c4c"
-},
-"unitPrice": {
-"font-family": "Helvetica Neue, sans-serif",
-"font-weight": "normal",
-"font-size": "15.299999999999999px",
-"color": "#4c4c4c"
-}
-},
-"text": {
-"button": "Add to cart"
-}
-},
-"option": {},
-"cart": {
-"styles": {
-"button": {
-"font-weight": "bold",
-"color": "#3e019a",
-":hover": {
-"color": "#3e019a",
-"background-color": "#bbe6ad"
-},
-"background-color": "#d0ffc0",
-":focus": {
-"background-color": "#bbe6ad"
-}
-}
-},
-"text": {
-"total": "Subtotal",
-"button": "Checkout"
-}
-},
-"toggle": {
-"styles": {
-"toggle": {
-"font-weight": "bold",
-"background-color": "#d0ffc0",
-":hover": {
-"background-color": "#bbe6ad"
-},
-":focus": {
-"background-color": "#bbe6ad"
-}
-},
-"count": {
-"color": "#3e019a",
-":hover": {
-"color": "#3e019a"
-}
-},
-"iconPath": {
-"fill": "#3e019a"
-}
-}
-}
-},
-});
-});
-}
-})();
-/*]]>*/
-</script></div>
-</div>
+    <section id="store">
+      <div class="shopify-container">
+        <h2>Merch & Products</h2>
+        <div id="shopify-embed">
+          <div id='collection-component-1748292361713'></div>
+        </div>
+      </div>
     </section>
 
     <footer class="site-footer">
@@ -283,7 +87,90 @@ options: {
     </footer>
   </main>
 
-  <!-- Script -->
+  <!-- Scripts -->
   <script src="js/player.js"></script>
+
+  <!-- Shopify Buy Button Scripts -->
+  <script type="text/javascript">
+    (function () {
+      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+      if (window.ShopifyBuy) {
+        if (window.ShopifyBuy.UI) {
+          ShopifyBuyInit();
+        } else {
+          loadScript();
+        }
+      } else {
+        loadScript();
+      }
+      function loadScript() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = scriptURL;
+        (document.head || document.body).appendChild(script);
+        script.onload = ShopifyBuyInit;
+      }
+      function ShopifyBuyInit() {
+        var client = ShopifyBuy.buildClient({
+          domain: 'xvpav0-s3.myshopify.com',
+          storefrontAccessToken: '739f2f97a9537660c80a18fe33999d00',
+        });
+
+        ShopifyBuy.UI.onReady(client).then(function (ui) {
+          // Collection
+          ui.createComponent('collection', {
+            id: '511679234362',
+            node: document.getElementById('collection-component-1748292361713'),
+            moneyFormat: '%24%7B%7Bamount%7D%7D',
+            options: {
+              // your existing collection styles here...
+            }
+          });
+
+          // Pre-order Product Button
+          ui.createComponent('product', {
+            id: '8311133210805', // Replace with your actual product ID
+            node: document.getElementById('product-component-1749491143341'),
+            moneyFormat: '%24%7B%7Bamount%7D%7D',
+            options: {
+              product: {
+                buttonDestination: 'cart',
+                layout: 'vertical',
+                contents: {
+                  img: false,
+                  title: true,
+                  price: true,
+                },
+                text: {
+                  button: 'Pre-order Album',
+                },
+                styles: {
+                  product: {
+                    textAlign: 'center',
+                    maxWidth: '100%',
+                  },
+                  button: {
+                    backgroundColor: '#1db954',
+                    color: '#ffffff',
+                    fontSize: '16px',
+                    padding: '12px',
+                    ':hover': {
+                      backgroundColor: '#17a04f'
+                    },
+                    ':focus': {
+                      backgroundColor: '#17a04f'
+                    }
+                  }
+                }
+              },
+              cart: {
+                startOpen: false
+              }
+            }
+          });
+        });
+      }
+    })();
+  </script>
 </body>
 </html>
