--- a/main.html
+++ b/main.html
@@ -47,8 +47,11 @@
           <div class="track-list" id="trackList">
             <!-- Injected by JS -->
           </div>
-          <!-- Pre-order Button -->
-          <div class="preorder-wrapper">
+        </div>
+      </div>
+    </section>
+   <!-- Pre-order Button -->
+        <center></center>  <div class="preorder-wrapper">
            <div id='product-component-1749491143341'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
@@ -240,11 +243,7 @@
 })();
 /*]]>*/
 </script>
-          </div>
-        </div>
-      </div>
-    </section>
-  
+          </div></center>
     <br/><br/><br/>
     <section id="event">
       <div class="release-video-wrapper">
