--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   <div class="email-wall-wrapper">
     <div class="email-wall">
-      <video class="logo" src="junglejuxev2.mp4" autoplay playsinline loop onended="this.pause(); this.currentTime = this.duration;" preload="auto"></video>
+     <video class="logo" src="junglejuxev2.mp4" controls playsinline preload="auto">
+  Your browser does not support the video tag.
+</video>
 
       <!-- Updated Google Sheets Form -->
       <form action="https://script.google.com/macros/s/AKfycbxh8QwKuZxen1VlHFzsP2RuL9Sc5_E8PX_wuUAwh-oRaLYhmqazlT6Oc9-j3DRd5rivDA/exec" method="POST" onsubmit="redirectAfterSubmit(event)">
