--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="email-wall-wrapper">
     <div class="email-wall">
+      <img src="assets/header_logo.png" class="header-logo" /><br/>
      <video class="logo" src="junglejuxev2.mp4" controls playsinline preload="auto">
   Your browser does not support the video tag.
 </video>
