--- a/album.html
+++ b/album.html
@@ -64,6 +64,6 @@
   </main>
 
   <!-- Scripts -->
-  <script src="js/player.js"></script>
+  <script src="js/playerfull.js"></script>
 </body>
 </html>
