--- a/main.html
+++ b/main.html
@@ -131,7 +131,7 @@
                       "price": false
                     },
                     "text": {
-                      "button": "Pre-Order JUNGLEJUXE"
+                      "button": "BUY JUNGLEJUXE"
                     }
                   },
                   "productSet": {
